style.css created

--- a/home.html
+++ b/home.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div class="header">
+    <span id="logo">
+      <img src="https://i.pinimg.com/736x/6b/b9/10/6bb910e00138342b49c6870eb39b224d.jpg"><br>
+      Danielle<br>
+      <text style="font-size:12px;">Artist • Programmer • Streamer • Model maker</text>
+    </span>
+    <span class="linkbar">
+      <a href="/" target="_blank">Home</a>
+      <a href="/" target="_blank">Social</a>
+      <a href="/" target="_blank">Portfolios</a>
+      <a href="/" target="_blank">Store</a>
+    </span>
+  </div>
+
+  <div class="divider"></div>
+
+  <div class="contentbox">
+    <div class="contentcontain">
+      
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/R.65b084596169ec9ef679985f8ba73b99?rik=xTzX%2fSaY%2b00G8g&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fCute-pink-backgrounds-for-laptop.jpg&ehk=aCXPKAZmDJRFCTnLqKJkdAHa6%2fNrOjon7NltGJSjfPM%3d&risl=&pid=ImgRaw&r=0">
+        <span class="title">A Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
+        <span class="title">A Medium Length Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/R.1c2249bf3a79e1186b418c884afcad59?rik=48KUva4WP6%2bDnQ&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fFree-Desktop-Cute-Laptop-Backgrounds.jpg&ehk=4Xyxft4b0KpHUwpJxbQNofHH91NXIWcjb303eyB9LaU%3d&risl=&pid=ImgRaw&r=0">
+        <span class="title">A Longer and More Wordy Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
+        <span class="title">A Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
+        <span class="title">A Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
+        <span class="title">A Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+
+      <span class= "posts">
+        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
+        <span class="title">A Title</span><br>
+        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+      </span>
+      
+    </div>
+  </div>
+  
+</body>
+
+</html>
