--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>My Portfolio</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -13,7 +13,7 @@
     <span id="logo">
       <img src="https://i.pinimg.com/736x/6b/b9/10/6bb910e00138342b49c6870eb39b224d.jpg"><br>
       Danielle<br>
-      <text style="font-size:12px;">Artist • Programmer • Streamer • Model maker</text>
+      <text style="font-size:12px;">Artist • Programmer • Streamer • V-Model maker</text>
     </span>
     <span class="linkbar">
       <a href="/" target="_blank">Home</a>
