--- a/home.html
+++ b/home.html
@@ -27,7 +27,8 @@
 
   <div class="contentbox">
     <div class="contentcontain">
-      
+      <h1><center>Updates</center></h1>
+
       <span class= "posts">
         <img src="https://th.bing.com/th/id/R.65b084596169ec9ef679985f8ba73b99?rik=xTzX%2fSaY%2b00G8g&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fCute-pink-backgrounds-for-laptop.jpg&ehk=aCXPKAZmDJRFCTnLqKJkdAHa6%2fNrOjon7NltGJSjfPM%3d&risl=&pid=ImgRaw&r=0">
         <span class="title">A Title</span><br>
