--- a/home.html
+++ b/home.html
@@ -26,49 +26,13 @@
   <div class="divider"></div>
 
   <div class="contentbox">
-    <h1><center>Updates</center></h1>
-    
+    <h1>Updates</h1>
+
     <div class="contentcontain">
       <span class= "posts">
         <img src="https://th.bing.com/th/id/R.65b084596169ec9ef679985f8ba73b99?rik=xTzX%2fSaY%2b00G8g&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fCute-pink-backgrounds-for-laptop.jpg&ehk=aCXPKAZmDJRFCTnLqKJkdAHa6%2fNrOjon7NltGJSjfPM%3d&risl=&pid=ImgRaw&r=0">
-        <span class="title">A Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
-        <span class="title">A Medium Length Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/R.1c2249bf3a79e1186b418c884afcad59?rik=48KUva4WP6%2bDnQ&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f08%2fFree-Desktop-Cute-Laptop-Backgrounds.jpg&ehk=4Xyxft4b0KpHUwpJxbQNofHH91NXIWcjb303eyB9LaU%3d&risl=&pid=ImgRaw&r=0">
-        <span class="title">A Longer and More Wordy Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
-        <span class="title">A Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
-        <span class="title">A Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
-        <span class="title">A Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
-      </span>
-
-      <span class= "posts">
-        <img src="https://th.bing.com/th/id/OIP.s7OmUHbPWMQYq0GcwDQCJAHaE8?pid=ImgDet&rs=1">
-        <span class="title">A Title</span><br>
-        <span id="poststext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+        <h2>My First Webpage posted!</h2><br>
+        <span id="poststext">Embark on a journey through my evolving path as a developer, where passion meets innovation. This portfolio showcases not only my technical skills but also the experiences and projects that have shaped my growth in the ever-changing world of technology. Join me as I explore the art of coding, problem-solving, and creativity, and witness how each step has contributed to my development as a professional in this dynamic field.</span>
       </span>
       
     </div>
