--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
       <text style="font-size:12px;">Artist • Programmer • Streamer • V-Model maker</text>
     </span>
     <span class="linkbar">
-      <a href="RubiesRiot.github.io/home.html" target="_blank">Home</a>
+      <a href="/home.html" target="_blank">Home</a>
       <a href="/" target="_blank">Social</a>
       <a href="/" target="_blank">Portfolios</a>
       <a href="/" target="_blank">Store</a>
