--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
     </span>
     <span class="linkbar">
       <a href="/" target="_blank">Home</a>
-      <a href="/contact.html" target="_blank">Social</a>
+      <a href="https://github.com/RubiesRiot/First-Website/blob/main/contact.html" target="_blank">Social</a>
       <a href="/" target="_blank">Portfolios</a>
       <a href="/" target="_blank">Store</a>
     </span>
