added to contact css

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <div class="form">
         <form action="#" method="post">
             <fieldset>
-                <legend>Get in Touch</legend>
+                <legend>Send an Email</legend>
                 
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
