--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   <div class="contentbox">
     <h1>Contact Me</h1>
 
-    <div class="form">
+    <div>
         <form action="#" method="post">
             <fieldset>
                 <legend>Send an Email</legend>
@@ -55,8 +55,8 @@
                 <button type="submit">Send Message</button>
             </fieldset>
         </form>
-      
     </div>
+      
   </div>
   
 </body>
