--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
   <div class="contentbox">
     <h1>Contact Me</h1>
-
+        <div class="content">
         <form action="#" method="post">
             <fieldset>
                 <legend>Send an Email</legend>
@@ -54,6 +54,7 @@
                 <button type="submit">Send Message</button>
             </fieldset>
         </form>
+        </div>
       
   </div>
   
