--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>My Portfolio</title>
-  <link href="contactstyle.css" rel="stylesheet" type="text/css" />
+  <link href="portartle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
