--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>My Portfolio</title>
-  <link href="contactstyle.css" rel="stylesheet" type="text/css" />
+  <link href="aboutstyle.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -17,17 +17,17 @@
     </span>
     <span class="linkbar">
       <a href="/" target="_blank">Home</a>
-      <a href="/" target="_blank">Social</a>
+      <a href="/" target="_blank">Email Me</a>
       <a href="/" target="_blank">Portfolios</a>
-      <a href="/" target="_blank">Store</a>
+      <a href="/" target="_blank">About Me</a>
     </span>
   </div>
 
   <div class="contentbox">
-    <h1>Contact Me</h1>
-        <div class="content">
-            Words test words
-        </div>
+    <h1>About Me</h1>
+        <div class="content"><div class="posts">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div></div>
       
   </div>
   
