--- a/about.html
+++ b/about.html
@@ -26,7 +26,14 @@
   <div class="contentbox">
     <h1>About Me</h1>
         <div class="content"><div class="posts">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>Hello! My name is Danielle Biederman. I am 28 years old, and very passionate about programming and web developing, and have been learning about it for years. I have been learning from a wide source of educators in the form of bootcamps and online programs, like AppAcademy, CodeAcademy, Skill Share, and some dozens of lovingly taught series through YouTube.</p>
+            <p>I first began pursuing my love for programming when I was just 16, and my mother bought me books on C++ for beginners, which the both of us read and learned together. From there, I learned how to make webpages look how I wanted with HTML and CSS, at first teaching myself through the "Inspect" option and picking apart code myself, but then later picking up bootcamps and courses as they became more accessible.</p>
+            <p>I am incredibly eager and quick to learn, as coding is a passion of mine. I enjoy it immensely, and would one day love to work with a team to continue my journey and improving my craft.</p>
+            <p>While coding is my #1 hobby, I also enjoy digital art and playing video games in my downtime. Currently, I do not stream, but would like to pick that back up once I'm able to afford a set-up beyond just my cheap laptop. I also like to mess around in Live2D, and enjoy making VTuber models when I don't have any current coding projects I'm working on.</p>
+            <ul>
+                <li><a href="">Social 1</a></li>
+                <li><a href="">Social 2</a></li>
+            </ul>
         </div></div>
       
   </div>
