--- a/about.html
+++ b/about.html
@@ -31,8 +31,9 @@
             <p>I am incredibly eager and quick to learn, as coding is a passion of mine. I enjoy it immensely, and would one day love to work with a team to continue my journey and improving my craft.</p>
             <p>While coding is my #1 hobby, I also enjoy digital art and playing video games in my downtime. Currently, I do not stream, but would like to pick that back up once I'm able to afford a set-up beyond just my cheap laptop. I also like to mess around in Live2D, and enjoy making VTuber models when I don't have any current coding projects I'm working on.</p>
             <ul>
-                <li><a href="">Social 1</a></li>
-                <li><a href="">Social 2</a></li>
+              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 1 </span> </button> </li>
+              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 2 </span> </button> </li>
+              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 3 </span> </button> </li>
             </ul>
         </div></div>
       
