--- a/about.html
+++ b/about.html
@@ -30,10 +30,27 @@
             <p>I first began pursuing my love for programming when I was just 16, and my mother bought me books on C++ for beginners, which the both of us read and learned together. From there, I learned how to make webpages look how I wanted with HTML and CSS, at first teaching myself through the "Inspect" option and picking apart code myself, but then later picking up bootcamps and courses as they became more accessible.</p>
             <p>I am incredibly eager and quick to learn, as coding is a passion of mine. I enjoy it immensely, and would one day love to work with a team to continue my journey and improving my craft.</p>
             <p>While coding is my #1 hobby, I also enjoy digital art and playing video games in my downtime. Currently, I do not stream, but would like to pick that back up once I'm able to afford a set-up beyond just my cheap laptop. I also like to mess around in Live2D, and enjoy making VTuber models when I don't have any current coding projects I'm working on.</p>
-            <ul>
-              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 1 </span> </button> </li>
-              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 2 </span> </button> </li>
-              <li class="btn btn-arrow-slide"> <button class="btn-arrow-slide-cont btn-arrow-slide-cont--black"> <span class="btn-arrow-slide-circle" aria-hidden="true"> <span class="btn-arrow-slide-arrow btn-arrow-slide-icon"></span> </span> <span class="btn-arrow-slide-text"> Social 3 </span> </button> </li>
+            <ul class="wrapper">
+              <li class="icon facebook">
+                <span class="tooltip">Facebook</span>
+                <span><i class="fab fa-facebook-f"></i></span>
+              </li>
+              <li class="icon twitter">
+                <span class="tooltip">Twitter</span>
+                <span><i class="fab fa-twitter"></i></span>
+              </li>
+              <li class="icon instagram">
+                <span class="tooltip">Instagram</span>
+                <span><i class="fab fa-instagram"></i></span>
+              </li>
+              <li class="icon github">
+                <span class="tooltip">Github</span>
+                <span><i class="fab fa-github"></i></span>
+              </li>
+              <li class="icon youtube">
+                <span class="tooltip">Youtube</span>
+                <span><i class="fab fa-youtube"></i></span>
+              </li>
             </ul>
         </div></div>
       
