--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>My Portfolio</title>
   <link href="aboutstyle.css" rel="stylesheet" type="text/css" />
+  <script src="https://kit.fontawesome.com/00ad9c107e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,24 +33,24 @@
             <p>While coding is my #1 hobby, I also enjoy digital art and playing video games in my downtime. Currently, I do not stream, but would like to pick that back up once I'm able to afford a set-up beyond just my cheap laptop. I also like to mess around in Live2D, and enjoy making VTuber models when I don't have any current coding projects I'm working on.</p>
             <ul class="wrapper">
               <li class="icon facebook">
-                <span class="tooltip">Facebook</span>
-                <span><i class="fab fa-facebook-f"></i></span>
+                <span class="tooltip">LinkedIn</span>
+                <span><i class="fa-brands fa-linkedin"></i></span>
               </li>
               <li class="icon twitter">
                 <span class="tooltip">Twitter</span>
                 <span><i class="fab fa-twitter"></i></span>
               </li>
               <li class="icon instagram">
-                <span class="tooltip">Instagram</span>
-                <span><i class="fab fa-instagram"></i></span>
+                <span class="tooltip">Replit</span>
+                <span><i class="fa-solid fa-bars"></i></span>
               </li>
               <li class="icon github">
                 <span class="tooltip">Github</span>
-                <span><i class="fab fa-github"></i></span>
+                <span><i class="fa-brands fa-github"></i></span>
               </li>
               <li class="icon youtube">
-                <span class="tooltip">Youtube</span>
-                <span><i class="fab fa-youtube"></i></span>
+                <span class="tooltip">Etsy</span>
+                <span><i class="fa-brands fa-etsy"></i></span>
               </li>
             </ul>
         </div></div>
