--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <title>My Portfolio</title>
   <link href="aboutstyle.css" rel="stylesheet" type="text/css" />
   <script src="https://kit.fontawesome.com/00ad9c107e.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
