--- a/about.html
+++ b/about.html
@@ -35,23 +35,23 @@
             <ul class="wrapper">
               <li class="icon facebook">
                 <span class="tooltip">LinkedIn</span>
-                <span><i class="fa-brands fa-linkedin"></i></span>
+                <span><i class="fa fa-brands fa-linkedin"></i></span>
               </li>
               <li class="icon twitter">
                 <span class="tooltip">Twitter</span>
-                <span><i class="fab fa-twitter"></i></span>
+                <span><i class="fa fa-brands fa-twitter"></i></span>
               </li>
               <li class="icon instagram">
                 <span class="tooltip">Replit</span>
-                <span><i class="fa-solid fa-bars"></i></span>
+                <span><i class="fa fa-solid fa-bars"></i></span>
               </li>
               <li class="icon github">
                 <span class="tooltip">Github</span>
-                <span><i class="fa-brands fa-github"></i></span>
+                <span><i class="fa fa-brands fa-github"></i></span>
               </li>
               <li class="icon youtube">
                 <span class="tooltip">Etsy</span>
-                <span><i class="fa-brands fa-etsy"></i></span>
+                <span><i class="fa fa-brands fa-etsy"></i></span>
               </li>
             </ul>
         </div></div>
