--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,12 @@
   
       <div class="row">
         <div class="thumb-box">
-          <a href="">
-            <img src="https://picsum.photos/640/480/?random" alt="">
+          <a href="https://replit.com/@DanielleBiederm/Creating-a-Store">
+            <img src="https://i.imgur.com/4bHDWzp.png" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
-              <span class="main-title">Lorem lipsum dollar set for dummy text.</span>
-              <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
+              <span class="meta">Python</span>
+              <span class="main-title">A Store in Python</span>
+              <span class="description">This Python code simulates a retail store environment. To run the code, a Python interpreter is required. The program incorporates various features, including anti-theft measures and error handling if users enter in incorrect inputs. After entering items, the application clears the screen and presents a comprehensive list of the selected products, complete with index numbers, individual prices, and a total cost summary. </span>
             </span>
           </a>
         </div>
@@ -45,7 +45,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">Simply the best text for dummy world is lorem lipsum.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy...</span>
             </span>
@@ -56,7 +56,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480/?random" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">How can we edit lorem lipsum text for dummy data.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
             </span>
@@ -67,7 +67,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480/?random" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">How can we edit lorem lipsum text for dummy data.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
             </span>
@@ -80,7 +80,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480/?random" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">Lorem lipsum dollar set for dummy text.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
             </span>
@@ -91,7 +91,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">Simply the best text for dummy world is lorem lipsum.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy...</span>
             </span>
@@ -102,7 +102,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480/?random" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">How can we edit lorem lipsum text for dummy data.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
             </span>
@@ -113,7 +113,7 @@
           <a href="">
             <img src="https://picsum.photos/640/480/?random" alt="">
             <span class="overlay-box">
-              <span class="meta">Feb 20, 2019</span>
+              <span class="meta">Metatext</span>
               <span class="main-title">How can we edit lorem lipsum text for dummy data.</span>
               <span class="description">Lorem lipsum dollar set is the best dummy text for the web world which has the best interaction...</span>
             </span>
