--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             <span class="overlay-box">
               <span class="meta">Python</span>
               <span class="main-title">A Store in Python</span>
-              <span class="description">This Python code simulates a retail store environment. To run the code, a Python interpreter is required. The program incorporates various features, including anti-theft measures and error handling if users enter in incorrect inputs. After entering items, the application clears the screen and presents a comprehensive list of the selected products, complete with index numbers, individual prices, and a total cost summary. </span>
+              <span class="description">This Python code simulates a retail store environment. The program incorporates various features, including anti-theft measures and input errors. The code shows a list of your items, individual lists, and price total upon entering. </span>
             </span>
           </a>
         </div>
