--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             <span class="overlay-box">
               <span class="meta">Python</span>
               <span class="main-title">A Store in Python</span>
-              <span class="description">This Python code simulates a retail store environment. The program incorporates various features, including anti-theft measures and input errors. The code shows a list of your items, individual lists, and price total upon entering. </span>
+              <span class="description">This Python code simulates a retail store environment. The program incorporates various features, including anti-theft measures and input errors. The code shows a list of your items, individual costs, and price total upon entering. </span>
             </span>
           </a>
         </div>
